app/assets/stylesheets/scaffolds.css.scss
/* ... */
.error-page {
  .header {
    margin-top: 20px;
    margin-bottom: 20px;
  }

  .footer {
    @media(min-width: 768px) {
      margin-top: 30px;
      margin-bottom: 30px;
    }

    li {
      list-style: none;

      @media(min-width: 768px) {
        display: inline-block;
        margin: 0 20px;
      }
    }
  }
}

#color_picker{
  opacity:0;
  background: transparent;
}
#customised_color_picker{
  display: inline-block;
  vertical-align: middle;
  cursor:pointer;
  transform: translateX(-5px);
}
#customised_plus_color{
  color: $primary-color;
}

.subscription {
  background-color: #13B0CA;
  margin-left: 10px;
  margin-right: 15px;

  & > a {
    color: $focus-font-color !important;
    font-weight: bold;
  }
}

input.form-control.number-of-days {
  width: 40px;
  padding-left: 3px;
  padding-right: 3px;

  &:focus {
    border-left-width: 1px;
  }
}

// Form
.row.form-group {
  &.has-error {
    .help-inline {
      color: $danger-color;
    }

    .help-block {
      color: inherit;
    }
  }

  .toggles-help-block {
    margin-left: 18%;
  }
}

.check-box.help-block {
  margin-top: 0px;
  margin-bottom: 15px;
}

// Error pages
.error-panel {
  border-color: #ebccd1;
}

.panel-heading.error-heading {
  background-color: #f2dede;
  border-color: #ebccd1;
}

.error-details {
  padding: 10px 20px;
  margin: 0 0 20px;
  font-size: 17.5px;
}

.dropdown-spacing {
  padding: 5px 10px;
}

[data-controller='routes_by_vehicles'][data-action='show'],
[data-controller='plannings'],
[data-controller='api_web_v01_plannings'] {

  %base-status {
    background: gray;
    display: inline-block;
    position: absolute;
    left: 23px;
    top: 4px;
    width: 11px;
    height: 11px;
    border: 1px solid #2C3539;
    border-radius: 1px;
  }

  .stop-status {
    @extend %base-status;
  }

  .store-status {
    @extend %base-status;
    left: 19px;
    width: 7px;
    height: 7px;
    top: 6;
  }

  .active_status .stop-status, .stop-popup .stop-status {
    position: relative;
    left: 0px;
    top: 0px;
    margin: 0px 5px;
  }

  .stop-status-planned, .stop-status-intransit {
    background: #357EC7;
  }
  .stop-status-started, .stop-status-exception {
    background: #FBB117;
  }
  .stop-status-finished, .stop-status-delivered {
    background: #58BE13;
  }
  .stop-status-rejected, .stop-status-undelivered {
    background: red;
  }
  .stop-status-none {
    background: none;
  }

  .stop-row {
    &.stop-row-intransit:after {
      position: absolute;
      height: calc(100% + 1px);
      width: 12px;
      right: 0;
      background: $primary-color;
    }

    &.stop-row-exception:after {
      position: absolute;
      height: calc(100% + 1px);
      width: 12px;
      right: 0;
      background: var(--warning);
    }

    &.stop-row-delivered:after {
      position: absolute;
      height: calc(100% + 1px);
      width: 12px;
      right: 0;
      background: var(--success);
    }

    &.stop-row-undelivered:after {
      position: absolute;
      height: calc(100% + 1px);
      width: 12px;
      right: 0;
      background: var(--danger);
    }

  }

  .ui-state-error{
    margin-right: -1px
  }
}

.flash-content {
  display: none;
}

.menu-left {
  flex-shrink: 0;
  width: $menu-width;
  background-color: $primary-color;
  display: flex;
  flex-direction: column;
  height: 100vh;
  padding-top: 1rem;
  align-items: center;
  justify-content: stretch;
  transition: width $transition-duration $transition-timing-curve;
  position: sticky;
  left: 0;

  .menu-section {
    margin-top: 24px !important;
    color: white;
    font-size: 24px;

    &:hover, &:focus {
      background-color: $primary-color;
      border-left: 3px solid $focus-menu-border;
    }
  }

  .help.menu-section {
    .btn {
      color: $primary-color;
    }

    > a {
      &:hover, &:focus {
        border-left: none !important;
      }
    }

    &:hover, &:focus {
      background-color: $primary-color;
      border-left: none;
    }
  }

  #accordion-menu {
    flex: 1 1 auto;
    overflow-y: auto;
    padding-bottom: 80px;
  }

  .menu-content {
    li {
      color: white !important;
    }

    li > a {
      color: white !important;
      display: block;
      padding: 3px 15px;
      overflow: hidden;
      text-overflow: ellipsis;

      &:hover, &:focus {
        color: darken(white, 20%);
        border-left:4px solid $focus-menu-border;
        text-decoration: none;
        text-overflow: clip;
        white-space: normal !important;
      }
    }
  }

  ul, li {
    list-style-type: none;
  }

  #menu-settings {
    position: absolute;
    bottom: 0;
    width: 100%;
    z-index: 2;
    background: $primary-color;
  }
}

.accordion-menu {
  transition: height $transition-duration $transition-timing-curve;
}

.menu-left .hidden-menu {
  opacity: 0;
  width: 0;
  transition: height $transition-duration $transition-timing-curve;
}


.menu-left.open .hidden-menu {
  width: 100%;
  height: auto;
  opacity: 1;
  margin-left: 1rem;
}
.menu-left .top-menu {
  display: flex;
  flex-direction: column;
  align-items: center;
  padding-bottom: 1rem;
}

.menu-left .logo {
  display: block;
  transition: $transition-duration $transition-timing-curve;
}
.menu-left .logo > img {
  width: 100%;
  height: 100%;
}

.menu-content {
  overflow-y: auto;
  overflow-x: hidden;
  flex-grow: 1;
  margin: 1rem 0;
}

.menu-content,
.bottom-menu {
  width: 100%;
}

#wrapper {
  display: flex;
}

.menu-list {
  margin: 0;
  padding: 0;
  display: flex;
  flex-direction: column;
  align-items: center;
  list-style: none;
}

.menu-left.open .menu-list-item {
  justify-content: flex-start;
}

.menu-icon {
  width: 25px;
  height: 25px;
  flex-shrink: 0;
}

.menu-list .hidden-menu {
  white-space: nowrap;
}

.menu-link {
  display: flex;
  width: 100%;
  padding: .5rem 0;
  color: var(--light-gray);
  text-decoration: none;
  align-items: center;
  padding-left: 25px;
}

.menu-list-item {
  position: relative;
  width: 100%;
}
/* ... */

